# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

ohos_shared_library("distributed_screen_sinktrans") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "./include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/imageJpeg/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${services_path}/screentransport/screendatachannel/include",
    "${services_path}/screentransport/screensinktrans/include",
    "${services_path}/screentransport/screensinkprocessor/include",
    "${services_path}/screentransport/screensinkprocessor/decoder/include",
    "${services_path}/screentransport/screensourceprocessor/include",
    "${services_path}/softbusadapter/include",
  ]

  sources = [
    "${common_path}/src/dscreen_json_util.cpp",
    "${services_path}/common/databuffer/src/data_buffer.cpp",
    "${services_path}/common/imageJpeg/src/jpeg_image_processor.cpp",
    "${services_path}/common/utils/src/dscreen_fwkkit.cpp",
    "${services_path}/common/utils/src/video_param.cpp",
    "${services_path}/screentransport/screendatachannel/src/screen_data_channel_impl.cpp",
    "${services_path}/screentransport/screensinkprocessor/decoder/src/image_decoder_callback.cpp",
    "${services_path}/screentransport/screensinkprocessor/decoder/src/image_sink_decoder.cpp",
    "${services_path}/screentransport/screensinkprocessor/src/image_sink_processor.cpp",
    "${services_path}/softbusadapter/src/softbus_adapter.cpp",
    "./src/screen_sink_trans.cpp",
  ]

  deps = [ "${common_path}:distributed_screen_utils" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dscreensinktrans\"",
    "LOG_DOMAIN=0xD004140",
  ]

  external_deps = [
    "av_codec:av_codec_client",
    "c_utils:utils",
    "distributed_hardware_fwk:distributed_av_receiver",
    "distributed_hardware_fwk:distributedhardwareutils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "libjpeg-turbo:turbojpeg",
    "media_foundation:media_foundation",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_screen"
}
