# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributedscreen/distributedscreen.gni")

ohos_shared_library("distributed_screen_sink_sdk") {
  include_dirs = [
    "//utils/system/safwk/native/include",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "include/callback",
    "${common_path}/include",
  ]

  sources = [
    "src/callback/dscreen_sink_load_callback.cpp",
    "src/dscreen_sink_handler.cpp",
    "src/dscreen_sink_proxy.cpp",
  ]

  deps = [
    "${common_path}:distributed_screen_utils",
    "//utils/native/base:utils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dscreensinksdk\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_screen"
}
