# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../../../distributedscreen.gni")

##############################fuzztest##########################################
ohos_fuzztest("PluginHardwareFuzzTest") {
  module_out_path = "distributed_screen/dscreenhandler"

  fuzz_config_file = "${distributedscreen_path}/screenhandler/test/fuzztest/pluginhardware_fuzzer"

  include_dirs = [
    "//third_party/json/include",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${distributedscreen_path}/screenhandler/include",
    "${fwk_services_path}/distributedhardwarefwkservice/include/localhardwaremanager",
    "${fwk_common_path}/utils/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "pluginhardware_fuzzer.cpp" ]

  deps = [
    "${distributedscreen_path}/screenhandler:distributed_screen_handler",
    "${fwk_services_path}/distributedhardwarefwkservice:distributedhardwarefwksvr",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"PluginHardwareFuzzTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_peripheral_display:hdi_display_gralloc",
    "graphic_standard:libgraphic_utils",
    "graphic_standard:surface",
    "ipc:ipc_core",
    "window_manager:libdm",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [ ":PluginHardwareFuzzTest" ]
}
###############################################################################
