# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

##############################fuzztest##########################################
ohos_fuzztest("UnPluginHardwareFuzzTest") {
  module_out_path = "${fuzz_test_path}/dscreenhandler"

  fuzz_config_file = "${distributedscreen_path}/screenhandler/test/fuzztest/unpluginhardware_fuzzer"

  include_dirs = [
    "include",
    "${common_path}/include",
    "${distributedscreen_path}/screenhandler/include",
  ]

  configs =
      [ "${common_path}/test/unittest/resource:dscreen_unittest_public_config" ]

  sources = [ "unpluginhardware_fuzzer.cpp" ]

  deps =
      [ "${distributedscreen_path}/screenhandler:distributed_screen_handler" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"UnPluginHardwareFuzzTest\"",
    "LOG_DOMAIN=0xD004140",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "graphic_2d:libgraphic_utils",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
    "window_manager:libdm",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":UnPluginHardwareFuzzTest" ]
}
###############################################################################
