# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/dscreen_handler_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/json/include",
    "${windowmanager_path}/interfaces/innerkits/dm",
    "${graphicstandard_path}/interfaces/innerkits/surface",
    "${mediastandard_path}/interfaces/inner_api/native",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "./include",
    "${common_path}/include",
    "//foundation/distributedhardware/distributed_screen/screenhandler/include",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/graphic/graphic_2d/utils/buffer_handle/export",
  ]
}

## UnitTest dscreen_handler_test
ohos_unittest("DscreenHandlerTest") {
  module_out_path = module_out_path

  sources = [ "//foundation/distributedhardware/distributed_screen/screenhandler/test/unittest/screenhandler/src/dscreen_handler_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${windowmanager_path}/dm:libdm",
    "//foundation/distributedhardware/distributed_screen/screenhandler:distributed_screen_handler",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DscreenHandlerTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  cflags = [
    "-frtti",
    "-fexceptions",
  ]
  cflags_cc = cflags
}
