# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/dscreen_handler_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "./include",
    "${common_path}/include",
    "${distributedscreen_path}/screenhandler/include",
  ]
}

## UnitTest dscreen_handler_test
ohos_unittest("DscreenHandlerTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_out_path

  sources = [ "${distributedscreen_path}/screenhandler/test/unittest/screenhandler/src/dscreen_handler_test.cpp" ]

  configs = [
    ":module_private_config",
    "${common_path}/test/unittest/resource:dscreen_unittest_public_config",
  ]

  deps = [
    "${distributedscreen_path}/screenhandler:distributed_screen_handler",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "av_codec:av_codec_client",
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "graphic_2d:libgraphic_utils",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
    "media_foundation:media_foundation",
    "window_manager:libdm",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DscreenHandlerTest\"",
    "LOG_DOMAIN=0xD004140",
  ]
}
