# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/screen_client_test"

config("module_private_config") {
  include_dirs = [
    "${windowmanager_path}/interfaces/innerkits/wm",
    "${graphicstandard_path}/interfaces/innerkits/surface",
    "${graphicstandard_path}/rosen/modules/render_service_client/core/ui",
    "${fwk_common_path}/utils/include",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include/",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${services_path}/screenclient/include",
    "${services_path}/screenclient/test/unittest/include",
  ]
}

## UnitTest screen_client_test
ohos_unittest("ScreenClientTest") {
  module_out_path = module_out_path

  sources = [
    "${services_path}/screenclient/test/unittest/src/screen_client_test.cpp",
    "${services_path}/screenclient/test/unittest/src/screen_client_window_adapter_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${common_path}:distributed_screen_utils",
    "${windowmanager_path}/wm:libwm",
    "//foundation/distributedhardware/distributed_screen/services/screenclient:distributed_screen_client",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "input:libmmi-client" ]
}

group("screen_client_test") {
  testonly = true
  deps = [ ":ScreenClientTest" ]
}
