# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/screen_client_test"

config("module_private_config") {
  include_dirs = [
    "include",
    "${common_path}/include",
    "${services_path}/screenclient/include",
    "${services_path}/screenclient/test/unittest/include",
  ]
}

## UnitTest screen_client_test
ohos_unittest("ScreenClientTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_out_path

  sources = [
    "${services_path}/screenclient/test/unittest/src/screen_client_test.cpp",
    "${services_path}/screenclient/test/unittest/src/screen_client_window_adapter_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "${common_path}/test/unittest/resource:dscreen_unittest_public_config",
  ]

  deps = [
    "${common_path}:distributed_screen_utils",
    "${distributedscreen_path}/services/screenclient:distributed_screen_client",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "input:libmmi-client",
    "window_manager:libwm",
  ]
}

group("screen_client_test") {
  testonly = true
  deps = [ ":ScreenClientTest" ]
}
