# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributedscreen/distributedscreen.gni")

module_out_path = "distributed_screen/soft_bus_adapter_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/json/include",
    "//foundation/graphic/graphic/interfaces/innerkits/surface",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/",
  ]

  include_dirs += [
    "./include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${services_path}/screentransport/test/unittest/screensourcetrans/include",
    "${services_path}/screentransport/screensourcetrans/include",
    "${services_path}/screentransport/screendatachannel/include",
    "${services_path}/screentransport/screensourceprocessor/include",
    "${services_path}/screentransport/screensourceprocessor/encoder/include",
    "${services_path}/softbusadapter/include",
  ]
}

## UnitTest screen_soft_bus_adapter_test
ohos_unittest("SoftBusAdapterTest") {
  module_out_path = module_out_path

  sources = [ "${services_path}/softbusadapter/test/unittest/src/softbus_adapter_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${fwk_utils_path}:distributedhardwareutils",
    "${services_path}/screentransport/screensourcetrans:distributed_screen_sourcetrans",
    "//foundation/graphic/graphic/frameworks/surface:surface",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "dsoftbus_standard:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_media_standard:media_client",
  ]
}

group("soft_bus_adapter_test") {
  testonly = true
  deps = [ ":SoftBusAdapterTest" ]
}
