# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/distributed_screen/soft_bus_adapter_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${services_path}/screentransport/test/unittest/screensourcetrans/include",
    "${services_path}/screentransport/screensourcetrans/include",
    "${services_path}/screentransport/screendatachannel/include",
    "${services_path}/screentransport/screensourceprocessor/include",
    "${services_path}/screentransport/screensourceprocessor/encoder/include",
    "${services_path}/softbusadapter/include",
  ]
}

## UnitTest screen_soft_bus_adapter_test
ohos_unittest("SoftBusAdapterTest") {
  module_out_path = module_out_path

  sources = [ "${services_path}/softbusadapter/test/unittest/src/softbus_adapter_test.cpp" ]

  configs = [
    ":module_private_config",
    "${common_path}/test/unittest/resource:dscreen_unittest_public_config",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SoftbusAdapterTest\"",
    "LOG_DOMAIN=0xD004140",
    "NORMAL_MOCK",
  ]

  deps = [ "${services_path}/screentransport/screensourcetrans:distributed_screen_sourcetrans" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "distributed_hardware_fwk:distributedhardwareutils",
    "dsoftbus:softbus_client",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (need_same_account) {
    defines += [ "SUPPORT_SAME_ACCOUNT" ]
  }
}

ohos_unittest("SoftbusPermissionCheckTest") {
  module_out_path = module_out_path

  include_dirs = [
    "${services_path}/softbusadapter/include",
    "${services_path}/softbusadapter/test/unittest/include"
  ]

  sources = [
    "${services_path}/softbusadapter/src/softbus_permission_check.cpp",
    "${services_path}/softbusadapter/test/unittest/src/device_manager_impl_mock.cpp",
    "${services_path}/softbusadapter/test/unittest/src/mock_other_method.cpp",
    "${services_path}/softbusadapter/test/unittest/src/socket_mock.cpp",
    "${services_path}/softbusadapter/test/unittest/src/softbus_permission_check_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "${common_path}/test/unittest/resource:dscreen_unittest_public_config",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SoftbusPermissionCheckTest\"",
    "LOG_DOMAIN=0xD004140",
    "NORMAL_MOCK",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "dsoftbus:softbus_client",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (need_same_account) {
    defines += [ "SUPPORT_SAME_ACCOUNT" ]
  }
}

group("soft_bus_adapter_test") {
  testonly = true
  deps = [
    ":SoftBusAdapterTest",
    ":SoftbusPermissionCheckTest",
  ]
}
